Thomas/WAO/21. The Cluster/nodeapplication/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  namespace: theclusterexcercise1
  labels:
    app: app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-pod
  template:
    metadata:
      labels:
        app: app-pod
    spec:
      containers:
        - name: app
          image: registry.gitlab.au.dk/swwao/demo-projs/typescript-mongodb-crud:latest
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          ports:
            - containerPort: 3000
      imagePullSecrets:
        - name: my-registry-credentials
