Thomas/WAO/21. The Cluster/nodeapplication/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: theclusterexcercise1
spec:
  selector:
    app: app-pod # Pods to target
  ports:
    - protocol: TCP
      port: 3000 # Port on the service
      targetPort: 3000 # Port on the Pods
  type: ClusterIP # Type of the service (default)
